--- a/app/src/main/res/layout/add_user_bottom_sheet.xml
+++ b/app/src/main/res/layout/add_user_bottom_sheet.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="@={homeViewModel.username}" />
+                android:text="@={homeViewModel._userNameInput}" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -54,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="@={homeViewModel.userEmail}" />
+                android:text="@={homeViewModel._userEmailInput}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- -->
